Changed functions and added some configurables

--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -4,12 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Configurables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learningRate = 0.01\n",
+    "lossFunctionOptions = [crossEntropyLoss]\n",
+    "lossFunction = lossFunctionOptions[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +270,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +581,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1041,7 @@
        "[569 rows x 31 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,37 +1080,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def logistic(X, W, b):\n",
-    "    z = np.dot(X, W) + b\n",
+    "    z = np.dot(X, W)\n",
     "    return 1 / (1 + np.exp(-z))\n",
     "\n",
-    "def relu(X):\n",
+    "def relu(X, W, b):\n",
+    "    Z = np.multiply(X, W)\n",
+    "    print(Z)\n",
+    "    r = []\n",
+    "    for z in Z:\n",
+    "        if z < 0:\n",
+    "            r.append(0)\n",
+    "        else:\n",
+    "            r.append(z)\n",
+    "    return r\n",
     "\n",
-    "    return \n",
-    "\n",
-    "def tanh(x):\n",
-    "    return np.tanh(x)"
+    "def tanh(X, W, b):\n",
+    "    z = np.dot(X, W) + b\n",
+    "    return np.tanh(z)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Loss Function"
+    "### Cost and Loss Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cost(y, yh):\n",
-    "    return (-(y * np.log(yh) + (1 - y) * np.log(1 - yh))).mean()"
+    "    r = []\n",
+    "    for i in range(0, len(y)):\n",
+    "        r.append(lossFunction(y[i], yh[i]))\n",
+    "    return np.mean(r)\n",
+    "\n",
+    "def crossEntropyLoss(y, yh):\n",
+    "    return -(y * np.log(yh) + (1 - y) * np.log(1 - yh))"
    ]
   }
  ],
